@@ -22,8 +22,11 @@
 // THE SOFTWARE.
 package com.microsoft.identity.common.java.opentelemetry;
 
+import javax.annotation.Nullable;
+
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import io.opentelemetry.api.trace.Span;
+import io.opentelemetry.api.trace.SpanContext;
 import io.opentelemetry.api.trace.StatusCode;
 import lombok.NonNull;
 
@@ -35,6 +38,18 @@ public class CertBasedAuthTelemetryHelper implements ICertBasedAuthTelemetryHelp
 
     private final Span mSpan;
 
+    /**
+     * Creates an instance of CertBasedAuthTelemetryHelper.
+     * @param spanContext current span context.
+     */
+    public CertBasedAuthTelemetryHelper(@NonNull final SpanContext spanContext) {
+        mSpan = OTelUtility.createSpanFromParent(SpanName.CertBasedAuth.name(), spanContext);
+    }
+
+    /**
+     * Creates an instance of CertBasedAuthTelemetryHelper.
+     * This constructor should only be used when the parent span context is not available.
+     */
     public CertBasedAuthTelemetryHelper() {
         mSpan = OTelUtility.createSpan(SpanName.CertBasedAuth.name());
     }
