@@ -6,6 +6,7 @@ V.Next
 - [MINOR] add removeUserLegacy method in MsalTestApp infra (#2212)
 - [PATCH] Always validate calling app's redirect URI (#2211)
 - [MINOR] Updating JSON version (#2221)
+- [PATCH] Passing span context to AuthorizationActivity (#2209)
 
 V.16.1.1
 ----------
